# AI-Calling-

./: .dockerignore  .env.example  Dockerfile  LICENSE  MIGRATION.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  passwords.py  security.py  session_tokens.py  state.py
app/db/: __init__.py  session.py
app/db/migrations/: 001_initial_schema.sql  002_multi_tenant.sql
app/db/repositories/: __init__.py  calls.py  customer_memory.py  messages.py  sessions.py  settings.py  users.py
app/schemas/: __init__.py  auth.py  calls.py  settings.py
app/services/: __init__.py  call_orchestrator.py  cr_handler.py  http_client.py  memory_service.py  prompts.py  settings_service.py  text_cleaner.py
app/services/ai/: llm.py  reply_parser.py  tts.py
app/services/llm/: base.py  (+4 more)
app/static/: index.html
db/: database.py  migration_add_llm_settings.sql  schema.sql
db/repositories/: calls.py  settings.py
frontend/components/: layout.html
frontend/pages/: calls.html  dashboard.html  dialer.html  hot_leads.html  settings.html
scripts/: DROP_MEMORY.sql  RESET_AND_REBUILD.sql  setup_db.py  validate_core.py
scripts/migrations/: 001_customer_memory.sql
services/: cartesia.py  clean.py  groq.py  llm.py  openai.py  sheets.py  storage.py
static/: index.html
tests/: conftest.py  test_passwords.py  test_phone_normalization.py  test_security.py  test_session_tokens.py  test_text_cleaner.py
(+47 files in other folders)
